--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -453,12 +453,20 @@
           <context context-type="sourcefile">src/app/components/Components/Problem/problem-card.component.ts</context>
           <context context-type="linenumber">58</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/services/problem.service.ts</context>
+          <context context-type="linenumber">64</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="1780950485960518731" datatype="html">
         <source>In Progress</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/Components/Problem/problem-card.component.ts</context>
           <context context-type="linenumber">59</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/services/problem.service.ts</context>
+          <context context-type="linenumber">66</context>
         </context-group>
       </trans-unit>
       <trans-unit id="9081463435738465430" datatype="html">
@@ -467,6 +475,10 @@
           <context context-type="sourcefile">src/app/components/Components/Problem/problem-card.component.ts</context>
           <context context-type="linenumber">60</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/services/problem.service.ts</context>
+          <context context-type="linenumber">68</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="5370838177584249385" datatype="html">
         <source>Resolved</source>
@@ -474,12 +486,20 @@
           <context context-type="sourcefile">src/app/components/Components/Problem/problem-card.component.ts</context>
           <context context-type="linenumber">61</context>
         </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/services/problem.service.ts</context>
+          <context context-type="linenumber">70</context>
+        </context-group>
       </trans-unit>
       <trans-unit id="7860418101283165917" datatype="html">
         <source>Closed</source>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/components/Components/Problem/problem-card.component.ts</context>
           <context context-type="linenumber">62</context>
+        </context-group>
+        <context-group purpose="location">
+          <context context-type="sourcefile">src/app/services/problem.service.ts</context>
+          <context context-type="linenumber">72</context>
         </context-group>
       </trans-unit>
       <trans-unit id="4873149362496451858" datatype="html">
